style.css
:root {
  --grey-300: #c5c6ce;
  --grey-200: #d8d8d8;
  --navy-950: #00001a;
  --navy-600: #5e607a;
  --gold-400: #e9aa52;
  --red-500: #f15d51;
}

/* inter-regular - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: "Inter";
  font-style: normal;
  font-weight: 400;
  src: url("assets/fonts/inter-v20-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* inter-500 - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  src: url("assets/fonts/inter-v20-latin-500.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* inter-600 - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: "Inter";
  font-style: normal;
  font-weight: 600;
  src: url("assets/fonts/inter-v20-latin-600.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* inter-700 - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: "Inter";
  font-style: normal;
  font-weight: 700;
  src: url("assets/fonts/inter-v20-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* inter-800 - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: "Inter";
  font-style: normal;
  font-weight: 800;
  src: url("assets/fonts/inter-v20-latin-800.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* inter-900 - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: "Inter";
  font-style: normal;
  font-weight: 900;
  src: url("assets/fonts/inter-v20-latin-900.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
*:not(dialog) {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  font-family: "Inter", Arial, Helvetica, sans-serif;
  /* 4. Increase line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
  height: auto;
}

a {
  text-decoration: none;
}

/* 7. Inherit fonts for form controls */
input,
button,
textarea,
select {
  font: inherit;
}

.grid-layout {
  display: grid;
  grid-template-columns:
    4px
    repeat(3, calc((100% - (16px * 2) - (12px * 2)) / 3))
    4px;
  column-gap: 12px;
  row-gap: 64px;
}

/* Different grid layouts for different screen sizes */
@media screen and (min-width: 768px) {
  .grid-layout {
    grid-template-columns:
      68px
      repeat(6, calc((100% - (80px * 2) - (12px * 5)) / 6))
      68px;
  }
}

@media screen and (min-width: 1440px) {
  .grid-layout {
    grid-template-columns:
      153px
      repeat(12, calc((100% - (165px * 2) - (12px * 11)) / 12))
      153px;
  }
}

.header-content {
  grid-column: 2 / -2;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-block: 28px 32px;
}

.navbar {
  ul {
    display: none;
    padding: 0;
    list-style-type: none;
    gap: 40px;
    justify-content: end;

    li a {
      display: inline-block;
      color: var(--navy-600);
      font-size: 15px;
      line-height: 1.18;
    }
  }
}

/* .hero {
  grid-column: 2 / -2;
  display: flex;
  flex-direction: column;
  row-gap: 64px;
  margin-block-end: 64px;
} */

.feature {
  grid-column: 2 / -2;

  display: flex;
  flex-direction: column;
  gap: 24px;

  .feature__image img {
    flex: 1;
    width: 100%;
    height: 100%;
  }

  .feature__image img {
    object-fit: cover;
  }

  .feature__content {
    flex: 1;
  }

  .feature__title {
    font-size: 40px;
    font-weight: 800;
    line-height: 1;
    color: var(--navy-950);
    margin-block-end: 24px;
    max-width: 10ch;
  }

  .feature__text {
    font-size: 15px;
    line-height: 1.625;
    color: var(--navy-600);
    margin-block-end: 24px;
  }

  .feature__link {
    display: inline-block;
    background-color: var(--red-500);
    padding: 12px 32px;
    font-size: 14px;
    font-weight: 700;
    text-transform: uppercase;
    color: var(--navy-950);
    line-height: 1.625;
    letter-spacing: 4.38px;
  }
}

.horizontal-line {
  height: 1px;
  background-color: var(--navy-600);
}

.news {
  grid-column: 2 / -2;

  background-color: var(--navy-950);
  color: var(--grey-300);
  padding: 21.5px;

  h2 {
    font-size: 32px;
    font-weight: 700;
    line-height: 1;
    color: var(--gold-400);
    margin-block-end: 32px;
  }

  h3 {
    font-size: 20px;
    font-weight: 800;
    color: #fff;
    margin-block-end: 8px;
  }

  p {
    font-size: 15px;
  }
}

.news-content {
  display: flex;
  flex-direction: column;
  gap: 32px;
}

.blog {
  grid-column: 2 / -2;
  display: grid;
  row-gap: 32px;
  margin-block-end: 80px;
}

.blog__post {
  display: grid;
  grid-template-columns: 100px auto;
  align-items: center;
  column-gap: 24px;

  img {
    height: 100%;
    width: 100%;
  }
}

.blog__post-content {
  display: grid;
  row-gap: 8px;

  div {
    font-size: 32px;
    font-weight: 700;
    line-height: 1;
    color: var(--red-500);
  }

  h4 {
    font-size: 18px;
    font-weight: 800;
    color: var(--navy-950);
  }

  p {
    font-size: 15px;
    color: var(--navy-600);
  }
}

@media screen and (min-width: 768px) {
  .feature {
    .feature__title {
      font-size: 40px;
      font-weight: 800;
      line-height: 1;
      color: var(--navy-950);
      margin-block-end: 24px;
      max-width: 100vw;
    }

    .feature__link {
      padding: 16px 32px;
    }
  }

  .news {
    padding: 32px 41px;

    h2 {
      font-size: 40px;
    }
  }
}

@media screen and (min-width: 1440px) {
  .navbar {
    ul {
      display: flex;
    }
  }

  .hamburger-icon-container {
    display: none;
  }

  .feature {
    grid-column: 2 / 10;

    .feature__content {
      display: flex;
      column-gap: 32px;
    }

    .feature__title {
      font-size: 56px;
      margin-block-end: 0;
    }

    .feature__text {
      margin-block-end: 32px;
      width: 350px;
    }
  }

  .news {
    grid-column: 10 / -2;
  }

  .blog {
    grid-column: 2 / -2;
    display: grid;
    grid-template-columns: auto auto auto;
    row-gap: 0;
    column-gap: 40px;
    margin-block-end: 125px;
  }
}

